--- a/final_report/Makefile
+++ b/final_report/Makefile
@@ -1,4 +1,6 @@
 all:
 	pdflatex thesis.tex
+	bibtex thesis.aux
+	pdflatex thesis.tex
 clean:
-	rm -f *.{aux,lof,log,out,toc,lot,pdf}
+	rm -f *.{aux,lof,log,out,toc,lot,bbl,blg,pdf}
