--- a/final_report/Makefile
+++ b/final_report/Makefile
@@ -2,5 +2,6 @@ all:
 	pdflatex thesis.tex
 	bibtex thesis.aux
 	pdflatex thesis.tex
+	pdflatex thesis.tex
 clean:
 	rm -f *.{aux,lof,log,out,toc,lot,bbl,blg,pdf}
