changes to makefile

--- a/final_report/Makefile
+++ b/final_report/Makefile
@@ -5,3 +5,6 @@ all:
 	pdflatex thesis.tex
 clean:
 	rm -f *.{aux,lof,log,out,toc,lot,bbl,blg,pdf}
+	mv images/frontpage.pdf ./frontpage.pdf
+	rm -f images/*.pdf
+	mv ./frontpage.pdf images/frontpage.pdf
