added flag for JSFlow-output in Makefile

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,5 @@
 all:
-	hastec Main.hs --onexec --debug --opt-whole-program
+	hastec Main.hs --onexec --debug --opt-whole-program --output-jsflow
 clean:
 	rm -f *.{hi,o,js}
 	rm -rf main/
